2002-06-23  Cyrille Chepelov  <cyrille@chepelov.org>

	* objects/FS/*.c:
	using dia_font_new_from_style()

2002-06-23  Hans Breuer  <hans@breuer.org>

	* lib/font.c : giving some love to
	dia_font_new_from_legacy_name() that is making
	import of old files as painless as possible and
	provide an almost exact match where possible.
	It does not yet fully work because it interfers
	with the Style to DiaStyle conversion which comes
	next ...

	[Changing these files is only allowed with Dia-0.90]
	* broken-files/fonts-0.90.dia : including the
	common hard-coded fonts from Dia-0.90. It also
	has drawn bounding-boxes for win32 as they were calculated
	from the former version (they were all too big).
	* broken-files/fonts-0.90-full.dia : all hardcoded
	fonts including the asian versions. On my machine
	this gives _a lot_ complaining about missing fonts
	and a finally a broken file display. Anyone having
	all these fonts ?
	
2002-06-23  Cyrille Chepelov  <cyrille@chepelov.org>

	* objects/chronogram/*.c: 
	* objects/custom/custom_object.c:
	* objects/ER/*.c:
	using dia_font_new_from_style()

2002-06-23  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* lib/widgets.c (dia_font_selector_set_styles): Improvements to
	font selector (stability, insensitivity).

	* lib/font.c (dia_font_scaled_build_layout): Removed unworkable
	stretching scheme for tweaking, and made scaling scheme faster
	(but less precise).
	(dia_font_dia_style_to_pango): Oops, % != /.

2002-06-23  Cyrille Chepelov  <cyrille@chepelov.org>

	
	* patch from Matthieu Sozeau  <mattam@netcourrier.com>:

	* plug-ins/xslt : Added an XSLT plugin to export dia files using
	XML Stylesheets. The plug-in requires DIA_PLUGIN_PATH to be set.
	It includes a small config file to tell it what stylesheets to use.

	(end of patch)
	
	* plug-ins/xslt/xsltdialog.c: modified the dialog to be more 
	GTK2.0/HIG compliant (the labels could be slightly more verbose,
	perhaps). Added back a couple forgotten _(). Removed //-style