@@ -1,6 +1,7 @@
 2002-06-23  Cyrille Chepelov  <cyrille@chepelov.org>
 
 	* objects/FS/*.c:
+	* objects/GRAFCET/*.c:
 	using dia_font_new_from_style()
 
 2002-06-23  Hans Breuer  <hans@breuer.org>
